[package]
name = "drv8305"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.enum-primitive-derive]
git = "https://gitlab.com/cardoe/enum-primitive-derive.git"

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

#[dev-dependencies.stm32f3xx-hal]
#path = "/Users/zklapow/dev/personal/embedded/stm32f3xx-hal"
#features = ["stm32f302x6"]
