[package]
name = "drv8305"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
description = "A I2C driver for the DRV8305 BLDC motor driver IC"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
enum-primitive-derive-nostd = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.defmt]
version = "0.1.0"
optional = true

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.3"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"

[dev-dependencies.stm32f3xx-hal]
version = "0.6.0"
features = ["stm32f302xb"]

[features]
default = ["use-defmt"]
use-defmt = ["defmt"]
